--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -5,3 +5,42 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
 
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
+
+
+RUN elasticsearch-plugin install https://github.com/KennFalcon/elasticsearch-analysis-hanlp/releases/download/v7.7.1/elasticsearch-analysis-hanlp-7.7.1.zip --batch
+
+
+# install dependency
+RUN yum install -y zip wget vim
+
+Entrypoint tail -f /dev/null
+## install gradle
+## https://gradle.org/releases/
+## https://linuxize.com/post/how-to-install-gradle-on-centos-7/
+# RUN yum install -y java-1.8.0-openjdk-devel \
+#    && java -version \
+#    && wget https://services.gradle.org/distributions/gradle-6.6.1-bin.zip -P /tmp \
+#    && unzip -d /opt/gradle /tmp/gradle-6.6.1-bin.zip \
+#    && ls /opt/gradle/gradle-6.6.1 \
+#    && touch /etc/profile.d/gradle.sh \
+#    && echo "export GRADLE_HOME=/opt/gradle/gradle-6.6.1" >> /etc/profile.d/gradle.sh \
+#    && echo "export PATH=\${GRADLE_HOME}/bin:\${PATH}" >> /etc/profile.d/gradle.sh \
+#    && chmod +x /etc/profile.d/gradle.sh \
+#    && source /etc/profile.d/gradle.sh \
+#    && gradle -v
+#
+## install jieba
+## https://github.com/sing1ee/elasticsearch-jieba-plugin/releases
+# RUN wget https://github.com/sing1ee/elasticsearch-jieba-plugin/archive/v7.7.1.zip -P /tmp \
+#    && mkdir -p /usr/share/elasticsearch/plugins/jieba \
+#    && unzip -d /usr/share/elasticsearch/plugins/jieba /tmp/v7.7.1.zip \
+#    && cd /usr/share/elasticsearch/plugins/jieba/elasticsarch-jieba-plugin-7.7.1/ \
+#    && source ~/.bashrc \
+#    && gradle pz \
+#    && mv build/distributions/elasticsearch-jieba-plugin-7.7.1.zip /usr/share/elasticsearch/plugins/jieba
+#
+## unzip jieba package and edit config
+# RUN cd /usr/share/elasticsearch/plugins/jieba \
+#    && unzip elasticsearch-jieba-plugin-7.4.2.zip \
+#    && mkdir -p /usr/share/elasticsearch/config/stopwords \
+#    && cp /usr/share/elasticsearch/plugins/jieba/dic/stopwords.txt /usr/share/elasticsearch/config/stopwords/stopwords.txt \
