- feat remove logstash - refactor verision to fit two tokenizer

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -13,34 +13,38 @@ RUN elasticsearch-plugin install https://github.com/KennFalcon/elasticsearch-ana
 # install dependency
 RUN yum install -y zip wget vim
 
-Entrypoint tail -f /dev/null
-## install gradle
-## https://gradle.org/releases/
-## https://linuxize.com/post/how-to-install-gradle-on-centos-7/
-# RUN yum install -y java-1.8.0-openjdk-devel \
-#    && java -version \
-#    && wget https://services.gradle.org/distributions/gradle-6.6.1-bin.zip -P /tmp \
-#    && unzip -d /opt/gradle /tmp/gradle-6.6.1-bin.zip \
-#    && ls /opt/gradle/gradle-6.6.1 \
-#    && touch /etc/profile.d/gradle.sh \
-#    && echo "export GRADLE_HOME=/opt/gradle/gradle-6.6.1" >> /etc/profile.d/gradle.sh \
-#    && echo "export PATH=\${GRADLE_HOME}/bin:\${PATH}" >> /etc/profile.d/gradle.sh \
-#    && chmod +x /etc/profile.d/gradle.sh \
-#    && source /etc/profile.d/gradle.sh \
-#    && gradle -v
-#
-## install jieba
-## https://github.com/sing1ee/elasticsearch-jieba-plugin/releases
-# RUN wget https://github.com/sing1ee/elasticsearch-jieba-plugin/archive/v7.7.1.zip -P /tmp \
-#    && mkdir -p /usr/share/elasticsearch/plugins/jieba \
-#    && unzip -d /usr/share/elasticsearch/plugins/jieba /tmp/v7.7.1.zip \
-#    && cd /usr/share/elasticsearch/plugins/jieba/elasticsarch-jieba-plugin-7.7.1/ \
-#    && source ~/.bashrc \
-#    && gradle pz \
-#    && mv build/distributions/elasticsearch-jieba-plugin-7.7.1.zip /usr/share/elasticsearch/plugins/jieba
-#
-## unzip jieba package and edit config
-# RUN cd /usr/share/elasticsearch/plugins/jieba \
-#    && unzip elasticsearch-jieba-plugin-7.4.2.zip \
-#    && mkdir -p /usr/share/elasticsearch/config/stopwords \
-#    && cp /usr/share/elasticsearch/plugins/jieba/dic/stopwords.txt /usr/share/elasticsearch/config/stopwords/stopwords.txt \
+# install gradle
+# https://gradle.org/releases/
+# https://linuxize.com/post/how-to-install-gradle-on-centos-7/
+
+RUN yum install -y java-1.8.0-openjdk-devel \
+    && java -version \
+    && wget https://services.gradle.org/distributions/gradle-6.6.1-bin.zip -P /tmp \
+    && unzip -d /opt/gradle /tmp/gradle-6.6.1-bin.zip \
+    && ls /opt/gradle/gradle-6.6.1 \
+    && touch /etc/profile.d/gradle.sh \
+    && echo "export GRADLE_HOME=/opt/gradle/gradle-6.6.1" >> /etc/profile.d/gradle.sh \
+    && echo "export PATH=\${GRADLE_HOME}/bin:\${PATH}" >> /etc/profile.d/gradle.sh \
+    && chmod +x /etc/profile.d/gradle.sh \
+    && source /etc/profile.d/gradle.sh \
+    && gradle -v
+
+
+# install jieba
+# https://github.com/sing1ee/elasticsearch-jieba-plugin/releases
+RUN wget https://github.com/sing1ee/elasticsearch-jieba-plugin/archive/v7.4.2.zip -P /tmp \
+    && mkdir -p /usr/share/elasticsearch/plugins/jieba \
+    && unzip -d /usr/share/elasticsearch/plugins/jieba /tmp/v7.4.2.zip \
+    && cd /usr/share/elasticsearch/plugins/jieba/elasticsearch-jieba-plugin-7.4.2/ \
+    && source ~/.bashrc \
+    && gradle pz \
+    && mv build/distributions/elasticsearch-jieba-plugin-7.4.2.zip /usr/share/elasticsearch/plugins/jieba
+
+
+# unzip jieba package and edit config
+RUN cd /usr/share/elasticsearch/plugins/jieba \
+    && unzip elasticsearch-jieba-plugin-7.4.2.zip \
+    && mkdir -p /usr/share/elasticsearch/config/stopwords \
+    && cp /usr/share/elasticsearch/plugins/jieba/dic/stopwords.txt /usr/share/elasticsearch/config/stopwords/stopwords.txt \
+    && sed -i s/elasticsearch.version\=7\.4\.2/elasticsearch.version=7\.7\.1/g plugin-descriptor.properties \
+    && echo "xpack.security.enabled:false" >> elasticsearch.yml
